# spec0

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: apioverview.rst  cli.rst  conf.py  index.rst
docs/reference/: cli.rst  filters.rst  index.rst  main.rst  output.rst  sources.rst  utils.rst
spec0/: releasesource.py
src/spec0/: cacheddownload.py  cli.py  main.py  output.py  releasefilter.py  releasefilters.py  releasesource.py
src/spec0/data/: github-releases.json
src/spec0/utils/: dates.py  packaging.py
tests/: requires_internet.py  test_cacheddownload.py  test_main.py  test_output.py  test_releasefilters.py  test_releasesource.py
tests/utils/: test_dates.py  test_packaging.py
